--- a/.github/workflows/master_build_docker_push.yml
+++ b/.github/workflows/master_build_docker_push.yml
@@ -17,6 +17,14 @@ jobs:
       with:
         java-version: 1.8
 
+    - name: Cache gradle caches
+      uses: actions/cache@v1
+      with:
+        path: ~/.gradle/caches
+        key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}
+        restore-keys: |
+          ${{ runner.os }}-gradle-
+
     - name: Build with Gradle
       run: ./gradlew build
 
