--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,7 +39,9 @@
     ]
   },
   "devDependencies": {
-    "@types/reach__router": "^1.3.5"
+    "@types/reach__router": "^1.3.5",
+    "cypress": "^4.7.0",
+    "eslint-plugin-cypress": "^2.11.1"
   },
   "proxy": "http://localhost:8080"
 }
