--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,17 +4,17 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.0",
-    "@reach/router": "^1.3.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^24.0.0",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.9.0",
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0",
-    "react-scripts": "3.4.0",
+    "@types/node": "^12.19.3",
+    "@types/react": "^16.9.56",
+    "@types/react-dom": "^16.9.9",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^4.0.0",
     "semantic-ui-react": "^0.88.2",
     "typescript": "~3.7.2"
   },
@@ -40,9 +40,9 @@
     ]
   },
   "devDependencies": {
-    "@types/reach__router": "^1.3.5",
-    "cypress": "^4.7.0",
-    "eslint-plugin-cypress": "^2.11.1"
+    "@types/react-router-dom": "^5.1.6",
+    "cypress": "^4.12.1",
+    "eslint-plugin-cypress": "^2.11.2"
   },
   "proxy": "http://localhost:8080"
 }
