--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,8 +43,12 @@
   },
   "devDependencies": {
     "@types/react-router-dom": "^5.1.6",
+    "@typescript-eslint/eslint-plugin": "^4.12.0",
+    "@typescript-eslint/parser": "^4.12.0",
     "cypress": "^4.12.1",
-    "eslint-plugin-cypress": "^2.11.2"
+    "eslint": "^7.17.0",
+    "eslint-plugin-cypress": "^2.11.2",
+    "eslint-plugin-react": "^7.22.0"
   },
   "proxy": "http://localhost:8080"
 }
