--- a/.github/workflows/master_build_docker_push.yml
+++ b/.github/workflows/master_build_docker_push.yml
@@ -26,7 +26,7 @@ jobs:
           ${{ runner.os }}-gradle-
 
     - name: Build with Gradle
-      run: ./gradlew build
+      run: ./gradlew build --info --stacktrace
 
     - name: Publish to Registry
       uses: elgohr/Publish-Docker-Github-Action@master
