add functionality to register for push notifications

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,9 @@
-# ToDo: add dry-run flag
 ynabsplitter:
   dry-run: true
   host: http://localhost:8080
+  notifications: # set in prod
+    public-key:
+    private-key:
 
 spring:
   profiles:
@@ -32,6 +34,3 @@ spring:
             client-secret: ${ynab.auth.client.secret}
             provider: ynab-provider
             redirect-uri: ${ynabsplitter.host}/login/oauth2/code/ynab
-server:
-  # try to prevent redirects to http behind a reverse proxy
-  forward-headers-strategy: native
