try more session options in a futile attempt

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -39,11 +39,13 @@ spring:
     store-type: mongodb
     mongodb:
       collection-name: sessions
+    timeout: 365d
 server:
   port: 8080
   servlet:
     session:
       timeout: 365d
+      persistent: true
 
 logging:
   level:
