--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -10,16 +10,18 @@
     {
       "src": "logo192.png",
       "type": "image/png",
-      "sizes": "192x192"
+      "sizes": "192x192",
+      "purpose": "maskable"
     },
     {
       "src": "logo512.png",
       "type": "image/png",
-      "sizes": "512x512"
+      "sizes": "512x512",
+      "purpose": "maskable"
     }
   ],
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#85C3E8",
-  "background_color": "#85C3E8"
+  "background_color": "#FFFFFF"
 }
