--- a/.github/workflows/master_build_docker_push.yml
+++ b/.github/workflows/master_build_docker_push.yml
@@ -2,7 +2,11 @@ name: Docker Image CI
 
 on:
   push:
-    branches: [ master, oauth-auth ]
+    branches:
+      - master
+  pull_request:
+    branches:
+      - master
 
 jobs:
   build:
@@ -40,6 +44,7 @@ jobs:
 
       - name: Publish to Registry
         uses: elgohr/Publish-Docker-Github-Action@master
+        if: github.ref == 'refs/heads/master'
         with:
           name: excape/ynab-splitter/ynab-splitter
           username: ${{ github.actor }}
