--- a/ynab-swagger-client/build.gradle
+++ b/ynab-swagger-client/build.gradle
@@ -17,22 +17,15 @@ buildscript {
 repositories {
     jcenter()
 }
-    apply plugin: 'java'
-    apply plugin: 'maven'
+apply plugin: 'java-library'
 
-    sourceCompatibility = JavaVersion.VERSION_1_7
-    targetCompatibility = JavaVersion.VERSION_1_7
+sourceCompatibility = JavaVersion.VERSION_1_7
+targetCompatibility = JavaVersion.VERSION_1_7
 
-    install {
-        repositories.mavenInstaller {
-            pom.artifactId = 'swagger-ynab-client'
-        }
-    }
-    
-    task execute(type:JavaExec) {
-       main = System.getProperty('mainClass')
-       classpath = sourceSets.main.runtimeClasspath
-    }
+task execute(type: JavaExec) {
+    main = System.getProperty('mainClass')
+    classpath = sourceSets.main.runtimeClasspath
+}
 
 ext {
     swagger_annotations_version = "2.0.0"
@@ -44,13 +37,13 @@ ext {
 }
 
 dependencies {
-    compile "io.swagger.core.v3:swagger-annotations:$swagger_annotations_version"
-    compile "org.springframework:spring-web:$spring_web_version"
-    compile "com.fasterxml.jackson.core:jackson-core:$jackson_version"
-    compile "com.fasterxml.jackson.core:jackson-annotations:$jackson_version"
-    compile "com.fasterxml.jackson.core:jackson-databind:$jackson_version"
-    compile "com.fasterxml.jackson.jaxrs:jackson-jaxrs-json-provider:$jackson_version"
-    compile "com.github.joschi.jackson:jackson-datatype-threetenbp:$jackson_threeten_version"
-    compile 'javax.annotation:javax.annotation-api:1.3.2'
-    testCompile "junit:junit:$junit_version"
+    implementation "io.swagger.core.v3:swagger-annotations:$swagger_annotations_version"
+    implementation "org.springframework:spring-web:$spring_web_version"
+    implementation "com.fasterxml.jackson.core:jackson-core:$jackson_version"
+    implementation "com.fasterxml.jackson.core:jackson-annotations:$jackson_version"
+    implementation "com.fasterxml.jackson.core:jackson-databind:$jackson_version"
+    implementation "com.fasterxml.jackson.jaxrs:jackson-jaxrs-json-provider:$jackson_version"
+    api "com.github.joschi.jackson:jackson-datatype-threetenbp:$jackson_threeten_version"
+    implementation 'javax.annotation:javax.annotation-api:1.3.2'
+    testImplementation "junit:junit:$junit_version"
 }
