add reviewers to renovate

--- a/renovate.json
+++ b/renovate.json
@@ -7,8 +7,16 @@
   ],
   "packageRules": [
     {
-      "matchUpdateTypes": ["minor", "patch", "pin", "digest"],
+      "matchUpdateTypes": [
+        "minor",
+        "patch",
+        "pin",
+        "digest"
+      ],
       "automerge": true
     }
+  ],
+  "reviewers": [
+    "excape"
   ]
 }
