--- a/ynab-swagger-client/build.gradle
+++ b/ynab-swagger-client/build.gradle
@@ -6,7 +6,7 @@ version = '0.0.1-SNAPSHOT'
 
 buildscript {
     repositories {
-        jcenter()
+        mavenCentral()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:1.5.+'
@@ -15,7 +15,7 @@ buildscript {
 }
 
 repositories {
-    jcenter()
+    mavenCentral()
 }
 apply plugin: 'java-library'
 
