--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -23,5 +23,5 @@ jobs:
       - uses: cypress-io/github-action@v2
         with:
           browser: chrome
-          project: ./frontend
+          working-directory: frontend
           start: ./gradlew bootRun --args='--spring.profiles.active=dev'
