try fixing pipeline

--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -24,4 +24,4 @@ jobs:
         with:
           browser: chrome
           working-directory: frontend
-          start: cd .. && ./gradlew bootRun --args='--spring.profiles.active=dev'
+          start: npm run cy:start-server
