--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,7 +26,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "cy:run": "cypress run",
-    "cy:open": "cypress open"
+    "cy:open": "cypress open",
+    "cy:start-server": "cd .. && ./gradlew bootRun --args='--spring.profiles.active=dev'"
   },
   "eslintConfig": {
     "extends": "react-app"
