try fixing pipeline

--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -25,3 +25,5 @@ jobs:
           browser: chrome
           working-directory: frontend
           start: npm run cy:start-server
+          wait-on: 'http://localhost:8080'
+          wait-on-timeout: 600
