--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "cy:run": "cypress run",
+    "cy:open": "cypress open",
+    "cy:start-server": "cd .. && ./gradlew bootRun --args='--spring.profiles.active=dev'"
   },
   "eslintConfig": {
     "extends": "react-app"
