npmInstall with gradle only for prod dependencies

--- a/frontend/build.gradle
+++ b/frontend/build.gradle
@@ -9,6 +9,10 @@ node {
     download = true
 }
 
+npmInstall {
+    args = ['--prod']
+}
+
 npm_run_build {
     inputs.files fileTree("public")
     inputs.files fileTree("src")
