group type updates for renovate

--- a/renovate.json
+++ b/renovate.json
@@ -14,6 +14,12 @@
         "digest"
       ],
       "automerge": true
+    },
+    {
+      "matchPackagePatterns": [
+        "^@types"
+      ],
+      "groupName": "types"
     }
   ],
   "reviewers": [
